# telegram-discounts-bot

./: .env-template  .gitignore  README.md  cleaning_csv.py  main.ipynb  main.py  produtos.csv  pyproject.toml  sent_products.csv
