[tool.poetry]
name = "secret"
version = "0.1.0"
description = ""
authors = ["David Ambrozio <davidambroziodev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.15.2"
webdriver-manager = "^4.0.1"
pandas = "^2.1.3"
python-telegram-bot = "^20.6"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
